Fix scrollbar issue, styled most of sign in page

--- a/aws-learning/frontend-with-aws/frontend/src/App.css
+++ b/aws-learning/frontend-with-aws/frontend/src/App.css
@@ -1,5 +1,11 @@
+body  {
+  background-color: #1b2f33;
+}
+
 .App {
   text-align: center;
+  top: 0px;
+  position: relative;
 }
 
 .App-logo {
